crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C025_C025.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
---
C025 use braces for positional parameters above 9
 --> <source>:4:16
  |
4 | printf '%s\n' "$10"
  |

C025 use braces for positional parameters above 9
 --> <source>:7:15
  |
7 | printf '%s\n' $123
  |
