crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C027_C027.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
---
C027 put a separator before this loop keyword, or quote it as literal text
 --> <source>:3:15
  |
3 | printf '%s\n' done
  |

C027 put a separator before this loop keyword, or quote it as literal text
 --> <source>:4:15
  |
4 | printf '%s\n' do
  |

C027 put a separator before this loop keyword, or quote it as literal text
 --> <source>:5:9
  |
5 | command done
  |

C027 put a separator before this loop keyword, or quote it as literal text
 --> <source>:6:3
  |
6 | x=done printf '%s\n' ok
  |

C027 put a separator before this loop keyword, or quote it as literal text
 --> <source>:7:10
  |
7 | export x=done
  |

C027 put a separator before this loop keyword, or quote it as literal text
 --> <source>:8:11
  |
8 | rvm 3.1.3 do rvm gemdir
  |

C027 put a separator before this loop keyword, or quote it as literal text
 --> <source>:9:3
  |
9 | : do
  |

C027 put a separator before this loop keyword, or quote it as literal text
  --> <source>:10:14
   |
10 | [ "$state" = done ]
   |

C027 put a separator before this loop keyword, or quote it as literal text
  --> <source>:11:14
   |
11 | [[ $state == done ]]
   |

C027 put a separator before this loop keyword, or quote it as literal text
  --> <source>:12:14
   |
12 | [[ $state == do ]]
   |

C027 put a separator before this loop keyword, or quote it as literal text
  --> <source>:13:6
   |
13 | case done in ok) :;; esac
   |

C027 put a separator before this loop keyword, or quote it as literal text
  --> <source>:14:14
   |
14 | for value in done; do :; done
   |

C027 put a separator before this loop keyword, or quote it as literal text
  --> <source>:15:11
   |
15 | echo hi > done
   |

C027 put a separator before this loop keyword, or quote it as literal text
  --> <source>:16:6
   |
16 | trap done EXIT
   |
