crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C030_C030.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
---
C030 this unary `[` test operator is missing its operand before the closing `]`
 --> <source>:2:9
  |
2 | if [ -d /tmp]; then
  |
