crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C032_C032.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
assertion_line: 288
---
C032 put a space after the opening test bracket
 --> <source>:3:1
  |
3 | [! -r /etc/passwd ]
  |

C032 put a space after the opening test bracket
 --> <source>:4:1
  |
4 | [foo]
  |

C032 put a space after the opening test bracket
 --> <source>:5:1
  |
5 | [foo ]
  |

C032 put a space after the opening test bracket
 --> <source>:6:1
  |
6 | [[foo]]
  |

C032 put a space after the opening test bracket
 --> <source>:7:1
  |
7 | [[foo ]]
  |

C032 put a space after the opening test bracket
 --> <source>:8:4
  |
8 | if [! -r x ]; then :; fi
  |

C032 put a space after the opening test bracket
 --> <source>:9:13
  |
9 | case x in a)[! -r x ];; esac
  |
