crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C033_C033.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
assertion_line: 288
---
C033 move this here-document terminator to the start of the line
 --> <source>:5:1
  |
5 |  EOF
  |

C033 move this here-document terminator to the start of the line
 --> <source>:6:1
  |
6 |   EOF
  |
