crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C034_C034.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
---
C034 this `if` block is not closed with `fi`
 --> <source>:2:1
  |
2 | if true; then
  |
