crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C035_C035.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
assertion_line: 76
---
C035 this `if` block is missing a closing `fi`
 --> <source>:4:1
  |
  |
