crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C036_C036.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
assertion_line: 78
---
C036 `[` test is missing its closing `]`
 --> <source>:2:4
  |
2 | if [ x = y; then :; fi
  |
