crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C037_C037.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
assertion_line: 80
---
C037 `[` test expression is malformed
 --> <source>:2:4
  |
2 | if [ x = y; then :; fi
  |
