crates/shuck-linter/src/rules/correctness/snapshots/shuck_linter__rules__correctness__tests__C039_C039.sh.snap
---
source: crates/shuck-linter/src/rules/correctness/mod.rs
assertion_line: 84
---
C039 double-quoted string looks unterminated
 --> <source>:2:6
  |
2 | echo "#!/bin/bash
  |
